0.14
* Moved win32 crap to a dir on its own.
* proxyrec/unix: IPv6 support for outgoing connections.

0.13
* New format: RealLogs (write-only).

0.12
* termplay/win32: exporting a part of a replay.

0.11
* Fixed a race condition in termplay/win32 that often caused crashes if the
  file to replay was specified on the command line.
* Done proxyrec/unix -- it's untested on anything but Debian/unstable/i386,
  though.
* Made some preliminary code for termrec/unix.  It's still buggy like if it
  was done by Microsoft, though (ok, well, perhaps I'm exaggerating).