@@ -1,6 +1,9 @@
 0.14
 * Moved win32 crap to a dir on its own.
-* proxyrec/unix: IPv6 support for outgoing connections.
+* proxyrec: IPv6 support for outgoing connections.
+* If you specify a format, you need to append requested compression type
+  to it (like, .nh.gz).  This allows disabling compression, before it was
+  always .bz2 unless a file name was explicitely set.
 
 0.13
 * New format: RealLogs (write-only).
